Fixing up some of the art and row spacing

--- a/projects/PSE/css/custom.css
+++ b/projects/PSE/css/custom.css
@@ -154,7 +154,8 @@ Puget Sound Energy
 	padding-top: 5px;
 }
 
-.xs-only {
+.row-no-padding {
+	padding-top: 0px;
 }
 
 @media all and (max-width: 9999px) {
